test/errmsg/vla-with-init.c.expect
---- stdout ----
---- stderr ----
errmsg/vla-with-init.c:6:7: error: Variable 'arr3' is a variable-length array with an initializer, which is invalid (C11 6.7.9p3).
---- exit status ----
Exit 2
