test/errmsg/vla-with-init.c
// vla-with-init.c
// VLA with an initializer.

void init_variable_length_array(int sz)
{
  int arr3[sz] = { 1,2,3 };
}

// EOF
